Fixed the alignment of the remember me checkbox and it's label

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -533,6 +533,14 @@ a.dock-item2 {
   padding-left: 10px;
 }
 
+#remember_me {
+  margin-top: 10px;
+    width: auto;
+    vertical-align: middle;
+    position: relative;
+    bottom: 6px;
+}
+
 // pygmentize styles
 .hll {
   background-color: #ffffcc
